# muscle-bids

./: .gitignore  README.md  dcm2mbids.py  requirements.txt  setup.cfg  test.py
dicom/GE_MEGRE/: IM0  IM1  IM10  IM100  IM101  IM102  IM103  IM104  IM105  IM106  IM107  IM108  IM109  IM11  IM110  IM111  IM112  IM113  IM114  IM115  IM116  IM117  IM118  IM119  IM12  IM120  IM121  IM122  IM123  IM124  IM125  IM126  IM127  IM128  IM129  IM13  IM130  IM131  IM132  IM133  (+216 more)
docs/: conf.py  index.rst  muscle_bids.rst  muscle_bids_utils.rst
dosma_io/: README.md  __init__.py  device.py  dosma_io_utils.py  med_volume.py
dosma_io/io/: __init__.py  format_io_utils.py  nifti_io.py
jupyter/: Muscle-bids_MedicalVolume_tests.ipynb  Muscle-bids_dcm2mbids.ipynb
jupyter/Example_Files/MESE_Anon/: image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm  image0008.dcm  image0009.dcm  image0010.dcm  image0011.dcm  image0012.dcm  image0013.dcm  image0014.dcm  image0015.dcm  image0016.dcm  image0017.dcm  image0018.dcm  image0019.dcm  image0020.dcm  image0021.dcm  image0022.dcm  image0023.dcm  image0024.dcm  image0025.dcm  image0026.dcm  image0027.dcm  image0028.dcm  image0029.dcm  image0030.dcm  image0031.dcm  image0032.dcm  image0033.dcm  image0034.dcm  image0035.dcm  image0036.dcm  image0037.dcm  image0038.dcm  image0039.dcm  (+80 more)
muscle_bids/: __init__.py
muscle_bids/config/: tag_definitions.py
muscle_bids/converters/: QuantitativeMaps.py  __init__.py  abstract_converter.py  megre.py  mese.py  quantitative_maps.py
muscle_bids/dosma_io/: __init__.py
muscle_bids/utils/: __init__.py  headers.py  image.py  io.py
src/: dcm2mbids.py
src/muscle_bids/: __init__.py  dcm2mbids.py
(+22 files in other folders)
