[metadata]
name = muscle-bids
version = 0.0.1
author = JCWMSK
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fsantini/muscle-bids
project_urls =
    Bug Tracker = https://github.com/fsantini/muscle-bids/issuesleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dcm2mbids = muscle_bids.dcm2mbids:main