[metadata]
name = muscle-bids
version = 0.0.1
author = Francesco Santini
author_email = francesco.santini@unibas.ch
description = Library for standardized data input/output for muscle MR imaging, based on BIDS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fsantini/muscle-bids
project_urls =
    Bug Tracker = https://github.com/fsantini/muscle-bids/issuesleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bidict
    natsort
    nibabel
    numpy
    scipy
    packaging
    pydicom
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dcm2mbids = muscle_bids.dcm2mbids:main